fix(select): align center

--- a/src/components/select/style/index.less
+++ b/src/components/select/style/index.less
@@ -40,7 +40,7 @@
   &-values-wrapper {
     position: relative;
     width: 100%;
-    padding-top: 5px;
+    line-height: 34px;
   }
 
   &-bordered {
@@ -125,7 +125,7 @@
 
   &-placeholder {
     position: absolute;
-    top: 7px;
+    top: 0;
     left: 0;
     color: @palette-black-3;
     opacity: 0.5;
@@ -161,16 +161,16 @@
       }
 
       &-values-wrapper {
-        padding-top: 3px;
+        line-height: 28px;
       }
       &-tag-item {
         margin-bottom: 2px;
       }
-      &-placeholder {
-        top: 5px;
-      }
       &-input {
         top: 6px;
+      }
+      &-input-tags {
+        top: 0;
       }
     }
   }
@@ -183,16 +183,16 @@
         padding: 0 34px 0 16px;
       }
       &-values-wrapper {
-        padding-top: 7px;
+        line-height: 38px;
       }
       &-tag-item {
         margin-bottom: 7px;
       }
-      &-placeholder {
-        top: 9px;
-      }
       &-input {
         top: 11px;
+      }
+      &-input-tags {
+        top: 0;
       }
     }
   }
